# RemoteWay

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/remoteway-capture/: Cargo.toml
crates/remoteway-capture/src/: backend.rs  desktop_detect.rs  detect.rs  error.rs  ext_capture.rs  lib.rs  output.rs  pipewire_capture.rs  portal.rs  protocols.rs  screencopy.rs  shm.rs  thread.rs  toplevel.rs  wayland_io.rs
crates/remoteway-capture/tests/: integration_capture.rs  mock_ext_capture.rs  mock_screencopy.rs
crates/remoteway-client/: Cargo.toml
crates/remoteway-client/src/: cli.rs  fps_overlay.rs  main.rs  pipeline.rs
crates/remoteway-compress/: Cargo.toml
crates/remoteway-compress/benches/: bench_compress.rs
crates/remoteway-compress/src/: compressor.rs  delta.rs  lib.rs  lz4.rs  pipeline.rs  stats.rs
crates/remoteway-compress/tests/: proptest_compress.rs
crates/remoteway-core/: Cargo.toml
crates/remoteway-core/benches/: bench_core.rs
crates/remoteway-core/src/: bandwidth.rs  buffer_pool.rs  frame_handle.rs  latency.rs  lib.rs  pipeline.rs  thread_config.rs
crates/remoteway-core/tests/: integration_buffer_pool.rs
crates/remoteway-display/: Cargo.toml
crates/remoteway-display/src/: cursor.rs  error.rs  lib.rs  presentation.rs  shm.rs  surface.rs  thread.rs
crates/remoteway-display/tests/: integration_display.rs  mock_display.rs
crates/remoteway-encode/: Cargo.toml
crates/remoteway-encode/src/: encoder.rs  error.rs  lib.rs  test_support.rs
crates/remoteway-encode/src/backends/: av1.rs  h264.rs  h265.rs  mod.rs
crates/remoteway-encode/src/test_support/: fixtures.rs  validator.rs
crates/remoteway-encode/tests/: av1_specific.rs  h264_specific.rs  h265_specific.rs
crates/remoteway-input/: Cargo.toml
crates/remoteway-input/src/: capture.rs  capture_thread.rs  error.rs  inject.rs  inject_thread.rs  keymap.rs  lib.rs  libei.rs
crates/remoteway-input/tests/: integration_input.rs  mock_input_capture.rs  mock_virtual_input.rs
crates/remoteway-interpolate/: Cargo.toml  build.rs
crates/remoteway-interpolate/benches/: bench_interpolate.rs
crates/remoteway-interpolate/src/: backend.rs  error.rs  interpolator.rs  lib.rs  manager.rs
crates/remoteway-interpolate/src/backends/: ffx_fg.rs  fsr2.rs  fsr2_native.rs  fsr2_rife.rs  fsr3.rs  fsr3_frame_gen.rs  mod.rs  nvidia_optical_flow.rs  rife.rs  vulkan_context.rs  wgpu_optical_flow.rs
crates/remoteway-interpolate/src/shaders/: compile.sh  easu_upscale.comp  easu_upscale.spv  flow_convert.comp  flow_convert.spv  motion_est.comp  motion_est.spv  rcas.comp  rcas.spv  warp_blend.comp  warp_blend.spv
crates/remoteway-interpolate/tests/: integration_interpolate.rs
crates/remoteway-interpolate/tmp/: ffx_vk_stubs.cpp
crates/remoteway-proto/: Cargo.toml
crates/remoteway-proto/src/: clipboard.rs  cursor.rs  error.rs  frame.rs  handshake.rs  header.rs  input.rs  lib.rs  monitor.rs  resize.rs  target_resolution.rs
crates/remoteway-proto/tests/: proptest_proto.proptest-regressions  proptest_proto.rs
crates/remoteway-server/: Cargo.toml
crates/remoteway-server/src/: cli.rs  main.rs  pipeline.rs
crates/remoteway-server/tests/: stress_pipeline.rs
crates/remoteway-transport/: Cargo.toml
crates/remoteway-transport/benches/: bench_transport.rs
crates/remoteway-transport/src/: chunk_sender.rs  flow_control.rs  lib.rs  multiplexer.rs  ssh_transport.rs
crates/remoteway-transport/tests/: proptest_transport.proptest-regressions  proptest_transport.rs
crates/remoteway-vulkan/: Cargo.toml
crates/remoteway-vulkan/src/: context.rs  error.rs  lib.rs  video.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame_header.rs  fuzz_stream_parser.rs
scripts/: coverage.sh
