[package]
name = "remoteway-capture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "wlr-screencopy, ext-image-capture, damage tracking"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-compress = { path = "../remoteway-compress" }
wayland-client.workspace = true
wayland-protocols = { workspace = true, features = ["client", "unstable"] }
wayland-protocols-wlr = { workspace = true, features = ["client"] }
wayland-scanner.workspace = true
nix.workspace = true
rtrb.workspace = true
wayland-backend.workspace = true
bitflags.workspace = true
tracing.workspace = true
thiserror.workspace = true
zbus = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
gnome = ["dep:zbus", "dep:serde", "dep:pipewire", "dep:tokio", "dep:futures-util"]

[dev-dependencies]
wayland-server.workspace = true
wayland-protocols = { version = "0.32", features = ["server", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }

[lints]
workspace = true
