[package]
name = "remoteway-capture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "wlr-screencopy, ext-image-capture, damage tracking"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-compress = { path = "../remoteway-compress" }
wayland-client.workspace = true
wayland-protocols = { workspace = true, features = ["client", "unstable"] }
wayland-protocols-wlr = { workspace = true, features = ["client"] }
wayland-scanner.workspace = true
nix.workspace = true
rtrb.workspace = true
wayland-backend.workspace = true
bitflags.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc.workspace = true

# Portal + GStreamer capture (for GNOME/KDE)
ashpd = { workspace = true, optional = true }
gstreamer = { workspace = true, optional = true }
gstreamer-app = { workspace = true, optional = true }
gstreamer-video = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
portal = ["dep:ashpd", "dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video", "dep:tokio", "dep:futures-util"]

[dev-dependencies]
wayland-server.workspace = true
wayland-protocols = { version = "0.32", features = ["server", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }

[lints]
workspace = true
