[package]
name = "remoteway-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client binary: transport → display → interpolate + input send"

[[bin]]
name = "remoteway-client"
path = "src/main.rs"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
remoteway-compress = { path = "../remoteway-compress" }
remoteway-transport = { path = "../remoteway-transport" }
remoteway-display = { path = "../remoteway-display" }
remoteway-interpolate = { path = "../remoteway-interpolate" }
remoteway-input = { path = "../remoteway-input" }
mimalloc = "0.1"
libc = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = "0.8"
tracy-client = { workspace = true, optional = true }

[features]
tracy = ["dep:tracy-client"]
