[package]
name = "remoteway-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Client binary: transport → display → interpolate + input send"

[[bin]]
name = "remoteway-client"
path = "src/main.rs"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
remoteway-compress = { path = "../remoteway-compress" }
remoteway-transport = { path = "../remoteway-transport" }
remoteway-display = { path = "../remoteway-display" }
remoteway-interpolate = { path = "../remoteway-interpolate" }
remoteway-input = { path = "../remoteway-input" }
mimalloc.workspace = true
libc.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zerocopy.workspace = true
tracy-client = { workspace = true, optional = true }

[features]
tracy = ["dep:tracy-client"]
fsr2 = ["remoteway-interpolate/fsr2"]
fsr3 = ["remoteway-interpolate/fsr3"]
fsr2-rife = ["remoteway-interpolate/fsr2-rife"]
gpu = ["fsr3", "fsr2"]
all = ["gpu", "fsr2-rife"]

[lints]
workspace = true
