[package]
name = "remoteway-compress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Delta encoding, LZ4/zstd pipeline, SIMD"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
lz4_flex.workspace = true
zstd = { workspace = true, optional = true }
rayon.workspace = true
wide.workspace = true
thiserror.workspace = true

tracy-client = { workspace = true, optional = true }

[features]
default = ["lz4"]
lz4 = []
tracy = ["dep:tracy-client"]
zstd-backend = ["dep:zstd"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "bench_compress"
harness = false

[lints]
workspace = true
