[package]
name = "remoteway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BufferPool, SPSC abstractions, common pipeline types"

[dependencies]
rtrb = "0.3"
thiserror = "2"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_core"
harness = false
