[package]
name = "remoteway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BufferPool, SPSC abstractions, common pipeline types"

[dependencies]
rtrb.workspace = true
thiserror.workspace = true
libc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_core"
harness = false

[lints]
workspace = true
