[package]
name = "remoteway-display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Client: wl_shm, surface management, cursor overlay"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
wayland-client.workspace = true
wayland-protocols = { workspace = true, features = ["client", "unstable", "staging"] }
nix.workspace = true
rtrb.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
wayland-server.workspace = true
wayland-protocols = { version = "0.32", features = ["server", "unstable", "staging"] }

[lints]
workspace = true
