[package]
name = "remoteway-encode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GPU video encoding via Vulkan Video (H.264, H.265, AV1). Encoder trait + per-codec backends"

[dependencies]
remoteway-vulkan = { path = "../remoteway-vulkan" }
ash.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
# Wired in task #5 (test harness). Kept as an optional regular dep rather than
# a dev-dependency so `cargo test` without the feature does not require system
# libavcodec headers, which break with FFmpeg 7+ (removed avfft.h).
ffmpeg-next = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }

[features]
default = ["h265"]
h264 = []
h265 = []
av1 = []
all-codecs = ["h264", "h265", "av1"]
# Enables the bitstream-validating test harness. Requires system libavcodec
# headers (libavcodec-dev / ffmpeg-devel) compatible with `ffmpeg-next`.
gpu-tests = ["dep:ffmpeg-next", "dep:tempfile"]

[lints]
workspace = true
