[package]
name = "remoteway-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Server: virtual-pointer/keyboard; client: input capture"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
rtrb = "0.3"
nix = { version = "0.29", features = ["mman", "fs"] }
zerocopy = "0.8"
tracing = "0.1"
thiserror = "2"

reis = { version = "0.6", optional = true }

[features]
gnome = ["dep:reis"]

[dev-dependencies]
wayland-server = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client", "server"] }
wayland-protocols-misc = { version = "0.3", features = ["client", "server"] }
