[package]
name = "remoteway-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Server: virtual-pointer/keyboard; client: input capture"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
wayland-client.workspace = true
wayland-protocols-wlr = { workspace = true, features = ["client"] }
wayland-protocols-misc = { workspace = true, features = ["client"] }
rtrb.workspace = true
nix.workspace = true
zerocopy.workspace = true
tracing.workspace = true
thiserror.workspace = true

reis = { workspace = true, optional = true }

[features]
gnome = ["dep:reis"]

[dev-dependencies]
wayland-server.workspace = true
wayland-protocols-wlr = { version = "0.3", features = ["client", "server"] }
wayland-protocols-misc = { version = "0.3", features = ["client", "server"] }

[lints]
workspace = true
