[package]
name = "remoteway-interpolate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FrameInterpolator trait + FSR/RIFE/NVIDIA OF backends"

[features]
default = []
wgpu-backend = ["dep:wgpu", "dep:bytemuck"]
fsr2 = ["dep:ash"]
nvidia-of = ["dep:ash"]
fsr3 = ["fsr2"]
rife = []

[dependencies]
thiserror = "2"

# Optional GPU dependencies (feature-gated)
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
ash = { version = "0.38", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_interpolate"
harness = false
