[package]
name = "remoteway-interpolate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FrameInterpolator trait + FSR/RIFE/NVIDIA OF backends"

[features]
default = []
wgpu-backend = ["dep:wgpu", "dep:bytemuck"]
fsr2 = ["dep:ash"]
nvidia-of = ["dep:ash"]
fsr3 = ["fsr2"]
rife = []

[dependencies]
thiserror.workspace = true

# Optional GPU dependencies (feature-gated)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true, features = ["derive"] }
ash = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_interpolate"
harness = false

[lints]
workspace = true
