[package]
name = "remoteway-interpolate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FrameInterpolator trait + FSR/RIFE/NVIDIA OF backends"

[features]
default = []
fsr2 = ["dep:ash", "dep:bytemuck", "dep:fsr", "dep:fsr-sys"]
fsr2-native = ["dep:fsr", "dep:fsr-sys", "dep:ash", "dep:bytemuck"]
fsr3 = ["dep:ash", "dep:bytemuck", "dep:half", "dep:fsr", "dep:fsr-sys"]
fsr2-rife = ["rife", "fsr2"]
rife = []

[dependencies]
thiserror.workspace = true

# Optional GPU dependencies (feature-gated)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true, features = ["derive"] }
ash = { workspace = true, optional = true }
half = { version = "2", optional = true }
fsr = { version = "0.1", optional = true, features = ["vulkan"] }
fsr-sys = { version = "0.1", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_interpolate"
harness = false

[lints]
workspace = true
