[package]
name = "remoteway-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Server binary: capture → compress → transport + input inject"

[[bin]]
name = "remoteway-server"
path = "src/main.rs"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
remoteway-capture = { path = "../remoteway-capture" }
remoteway-compress = { path = "../remoteway-compress" }
remoteway-transport = { path = "../remoteway-transport" }
remoteway-input = { path = "../remoteway-input" }
mimalloc.workspace = true
libc.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zerocopy.workspace = true
tracy-client = { workspace = true, optional = true }

[features]
tracy = ["dep:tracy-client"]
portal = ["remoteway-capture/portal"]

[lints]
workspace = true
