[package]
name = "remoteway-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SSH multiplexed protocol over stdin/stdout"

[dependencies]
remoteway-core = { path = "../remoteway-core" }
remoteway-proto = { path = "../remoteway-proto" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "bench_transport"
harness = false

[lints]
workspace = true
